fix feature images overflowing container on firefox

--- a/apps/feature/index.styl
+++ b/apps/feature/index.styl
@@ -80,6 +80,9 @@
       border-bottom none
     img
       height 400px
+    .artwork-item-image-link
+      display block
+      width 100%
     
 .feature-set-title
   font-size 30px
